# CMSC-240-Final-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  UML_Diagram.md  change_log.xlsx
analyzing/: CMakeLists.txt
jsons/: history.json  rawHistory.json  status.json
python/scraping/: fetch_balance.py
python/visualizing/.matplotlib/: fontlist-v390.json
ui/: CMakeLists.txt  ChartsTab.cpp  ChartsTab.h  DataLoader.cpp  DataLoader.h  HistoryModel.cpp  HistoryModel.h  MainWindow.cpp  MainWindow.h  OverviewTab.cpp  OverviewTab.h  Palette.h  RecommendationsTab.cpp  RecommendationsTab.h  StatusBanner.cpp  StatusBanner.h  main.cpp  styles.qss
